--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -18,12 +18,13 @@
             <div class="sidebar" id="sidebar">
                 <div class="sidebar-header">
                     <a href="{% if user.rol == "administrador" or user.is_superuser %}{% url 'equipment:admin_panel' %}{% else %}{% url 'equipment:tech_dashboard' %}{% endif %}" class="logo">
-                        <i class="fas fa-tools"></i>
+                        <img src="{% static 'img/logo2.png' %}" alt="Logo" class="logo-img"/>
+                        {% comment %} <i class="fas fa-tools"></i> {% endcomment %}
                         <span>
                             {% if user.rol == "administrador" or user.is_superuser %}
-                                Panel de Administración
+                                Panel del Administrador
                             {% elif user.rol == "tecnico" %}
-                                Panel de Tecnico
+                                Panel del Tecnico
                             {% else %}
                                 Soporte Técnico UPT
                             {% endif %} 
@@ -44,10 +45,14 @@
                                 <i class="fas fa-user-plus"></i>
                                 Registrar Usuario
                             </a>
-                            <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="user-roles">
+                            <a href="{% url 'users:logs_list' %}" class="nav-item" data-section="user-logs">
+                                <i class="fas fa-file-alt"></i>
+                                Registros de Acceso
+                            </a>
+                            {% comment %} <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="user-roles">
                                 <i class="fas fa-user-tag"></i>
                                 Roles y Permisos
-                            </a>
+                            </a> {% endcomment %}
                         </div>
                         
                         <div class="nav-section">
@@ -109,6 +114,7 @@
                                 <i class="fas fa-chart-line"></i>
                                 Reportes
                             </a>
+
                             {% comment %} <a href="#" class="nav-item" data-section="my-tasks">
                                 <i class="fas fa-tasks"></i>
                                 Mis Tareas
@@ -236,10 +242,17 @@
                                 <i class="fas fa-user"></i>
                                 Mi Perfil
                             </a>
-                            <a href="{% url 'maintenance:maintenance' %}" class="dropdown-item">
-                                <i class="fas fa-cog"></i>
-                                Configuración
-                            </a>
+                            {% if user.rol == "administrador" or user.is_superuser %}
+                                <a href="{% url 'equipment:configuracion' %}" class="dropdown-item">
+                                    <i class="fas fa-cog"></i>
+                                    Configuración
+                                </a>
+                            {% else %}
+                                <a href="{% url 'equipment:configuracion_tech' %}" class="dropdown-item">
+                                    <i class="fas fa-cog"></i>
+                                    Configuración
+                                </a>
+                            {% endif %}
                             <a href="{% url 'maintenance:maintenance' %}" class="dropdown-item">
                                 <i class="fas fa-bell"></i>
                                 Notificaciones
