--- a/static/css/home/root.css
+++ b/static/css/home/root.css
@@ -12,6 +12,7 @@ body {
 /* Background Image */
 body {
     background-image: url('/static/img/logo.jpg');
+    background-image: url('../../img/logo.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
